# Rustgolf

./: Cargo.toml  Web.toml  imgui.ini  settings.json
assets/maps/: basic.tsx
assets/maps/debug/: 01.json  01.tmx
assets/sprites/balls/: basic.aseprite  basic.json
assets/tiles/: basic.json
assets/tiles/basic/: grass.aseprite  wall.aseprite
mela/: Cargo.toml
mela/src/: assets.rs  debug.rs  ecs.rs  game.rs  gfx.rs  lib.rs  profiler.rs  state.rs
mela/src/assets/: image.rs  spritesheet.rs  tilemap.rs
mela/src/assets/tilemap/: data.rs  layers.rs  object.rs  tile.rs  tilemap.rs  tileset.rs
mela/src/components/: mod.rs  physics.rs
mela/src/ecs/: entity.rs  system.rs  world.rs
mela/src/gfx/: mesh.rs  spritebatch.rs  spritesheet.rs
minigolf/: Cargo.toml
minigolf/src/: api.rs  components.rs  main.rs  minigolf.rs  physics.rs  player.rs  resources.rs  states.rs  systems.rs  world.rs
minigolf/src/components/: gfx.rs  mod.rs  physics.rs
minigolf/src/states/: load.rs  loading_screen.rs  mod.rs  multiplay.rs  play.rs  play_screen.rs  state_debugger.rs
minigolf/src/systems/: physics.rs  util.rs
src/: game.rs  main.rs  minigolf.rs
src/game/: assets.rs  gfx.rs  state.rs
src/game/assets/: image.rs
src/game/gfx/: spritesheet.rs
src/minigolf/: states.rs
