[package]
name = "mela"
version = "0.1.0"
authors = ["Aatu Hieta <aatu@hieta.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glium = "0.26.0-alpha5"
image = "0.22.3"
imgui = { path = "../../imgui-rs" }
nalgebra = "0.19.0"
ncollide2d = "0.21.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"