[package]
name = "minigolf"
version = "0.1.0"
authors = ["Aatu Hieta <aatu@hieta.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.2.0"
mela = { path = "../mela" }
replace_with = "0.1.5"
imgui-glium-renderer = { path = "../../imgui-rs/imgui-glium-renderer" }
imgui-winit-support = { path = "../../imgui-rs/imgui-winit-support", features=["winit-20"], default-features=false}