[package]
name = "minigolf"
version = "0.1.0"
authors = ["Aatu Hieta <aatu@hieta.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mela = { path = "../../mela", features = ["2d"], default-features = false }
num = "0.3.0"
reqwest = {version = "0.10", features = ["blocking", "json"]}
uuid = { version = "0.8.1", features = ["v4"]}
serde = "1.0.116"
rayon = "1.4"